# django-aliyun-oss

./: .gitignore  README.md  pyproject.toml  setup.py
django5_aliyun_oss/: __init__.py  apps.py
django_aliyun_oss/: __init__.py  apps.py  storage.py
django_aliyun_oss.egg-info/: PKG-INFO  SOURCES.txt
django_aliyun_oss/tests/: __init__.py
